--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ You can install C306 from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("lampk/C306")
+devtools::install_github("oucru-biostats/C306")
 ```
 
 ## Website
